force-app/main/default/objects/Batch_Sequence__mdt/Batch_Sequence__mdt.object-meta.xml
<CustomObject>
    <description>다음 배치, 스케쥴 체크 및 실행 관리 데이터</description>
    <label>Batch Sequence</label>
</CustomObject>