force-app/main/default/objects/Batch_Sequence__mdt/fields/Chain_Last__c.field-meta.xml
<CustomField>
    <fullName>Chain_Last__c</fullName>
    <defaultValue>false</defaultValue>
    <description>마지막 체인</description>
    <label>Chain Last</label>
    <type>Checkbox</type>
</CustomField>