force-app/main/default/objects/Batch_Sequence__mdt/fields/Chain_Name__c.field-meta.xml
<CustomField>
    <fullName>Chain_Name__c</fullName>
    <description>Chain Name</description>
    <label>Chain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>