force-app/main/default/objects/Batch_Sequence__mdt/fields/Chain_No__c.field-meta.xml
<CustomField>
    <fullName>Chain_No__c</fullName>
    <description>Chain 순서</description>
    <label>Chain No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>