force-app/main/default/objects/Batch_Sequence__mdt/fields/CronExpression__c.field-meta.xml
<CustomField>
    <fullName>CronExpression__c</fullName>
    <description>CronExpression</description>
    <label>CronExpression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>