force-app/main/default/objects/Batch_Sequence__mdt/fields/isScheduled__c.field-meta.xml
<CustomField>
    <fullName>isScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>분 단위 스케줄 여부</description>
    <label>isScheduled</label>
    <type>Checkbox</type>
</CustomField>