force-app/main/default/objects/Batch_Sequence__mdt/fields/NextBatchName__c.field-meta.xml
<CustomField>
    <fullName>NextBatchName__c</fullName>
    <label>NextBatchName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>