force-app/main/default/objects/Batch_Sequence__mdt/fields/Queueable__c.field-meta.xml
<CustomField>
    <fullName>Queueable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Batch Sequence 에서 Queueable 실행구분 값</description>
    <label>Queueable</label>
    <type>Checkbox</type>
</CustomField>