force-app/main/default/objects/Batch_Sequence__mdt/fields/ScheduleClass__c.field-meta.xml
<CustomField>
    <fullName>ScheduleClass__c</fullName>
    <label>ScheduleClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>