force-app/main/default/objects/Batch_Sequence__mdt/fields/ScopeSize__c.field-meta.xml
<CustomField>
    <fullName>ScopeSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>배치 프로그램 사이즈</description>
    <label>ScopeSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>